--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -64,7 +64,9 @@
                 </form>
             </tab>
             <tab heading="Edit Photo">
-                <p>Photos</p>
+                <app-photo-editor
+                    [member]="member">
+                </app-photo-editor>
             </tab>
         </tabset>
     </div>
