--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,24 +1,69 @@
-<form #registerForm="ngForm"
-    (ngSubmit)="register()"
-    autocomplete="off">
+<form [formGroup]="registerForm"
+    (ngSubmit)="registerForm.valid && register()">
     <h2 class="text-center text-primary">Sing up</h2>
     <hr>
+
     <div class="form-group">
-        <input type="text"
-            class="form-control"
-            name="userName"
-            [(ngModel)]="model.userName"
-            placeholder="User name">
+        <label class="control-label"
+            style="margin-right: 10px;">
+            I am a: 
+        </label>
+        <label class="redio-inline">
+            <input type="radio"
+                value="male"
+                formControlName="gender">
+            Male
+        </label>
+        <label class="redio-inline">
+            <input type="radio"
+                value="female"
+                formControlName="gender"
+                class="fl-3">
+            Female
+        </label>
     </div>
-    <div class="form-group">
-        <input type="password"
-        class="form-control"
-        name="password"
-        [(ngModel)]="model.password"
-        placeholder="Password">
+
+    <app-text-input 
+        [formControl]="registerForm.controls['userName']"
+        [label]="'Username'">
+    </app-text-input>
+    <app-text-input 
+        [formControl]="registerForm.controls['knownAs']"
+        [label]="'Known As'">
+    </app-text-input>
+    <app-date-input 
+        [formControl]="registerForm.controls['dateOfBirth']"
+        [label]="'Date of Birth'"
+        [maxDate]="maxDate">
+    </app-date-input>
+    <app-text-input 
+        [formControl]="registerForm.controls['city']"
+        [label]="'City'">
+    </app-text-input>
+    <app-text-input 
+        [formControl]="registerForm.controls['country']"
+        [label]="'Country'">
+    </app-text-input>
+    <app-text-input 
+        [formControl]="registerForm.controls['password']"
+        [label]="'Password'"
+        [type]="'password'">
+    </app-text-input>
+    <app-text-input 
+        [formControl]="registerForm.controls['confirmPassword']"
+        [label]="'Confirm password'"
+        [type]="'password'">
+    </app-text-input>
+    <div class="row" *ngIf="validationErrors.length > 0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">
+                {{error}}
+            </li>
+        </ul>
     </div>
     <div class="form-group text-center">
         <button class="btn btn-success mr-2"
+            [disabled]="!registerForm.valid"
             type="submit">
             Register
         </button>
