--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -19,7 +19,7 @@
             btnRadio="Outbox"
             [(ngModel)]="container"
             (click)="loadMessages()">
-            <i class="fa fa-envelope-plane"></i>
+            <i class="fa fa-paper -plane"></i>
             Outbox
         </button>
     </div>
@@ -38,10 +38,12 @@
             <th style="width: 20%;">Sent / Recieved</th>
             <th style="width: 20%;"></th>
         </tr>
-        <tr *ngFor="let message of messages"
+        <tr [hidden]="loading"
+            *ngFor="let message of messages"
             routerLink="{{container === 'Outbox' ? 
                 '/members/' + message.recipientUserName : 
-                '/members/' + message.SenderUserName}}">
+                '/members/' + message.SenderUserName}}"
+                [queryParams]="{tab: 3}">
             <td>{{message.content}}</td>
             <td>
                 <div *ngIf="container === 'Outbox'">
@@ -59,14 +61,17 @@
             </td>
             <td>{{message.messageSent}}</td>
             <td>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger"
+                    (click)="$event.stopPropagation()"
+                    (click)="deleteMessage(message.id)">
                     Delete
                 </button>
             </td>
         </tr>
     </table>
 </div>
-<div class="d-flex justify-content-center" *ngIf="pagination">
+<div class="d-flex justify-content-center" 
+    *ngIf="pagination && !loading">
     <pagination 
         [boundaryLinks]="true" 
         [totalItems]="pagination.totalItems"
