--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -5,6 +5,11 @@
                 alt="{{member.knownAs}}" 
                 class="card-img-top img-thumbnail">
             <div class="card-body">
+                <div class="mb-2"
+                    *ngIf="(presenceService.onlineUsers$ | async).includes(member.userName)">
+                    <i class="fa fa-user-circle text-success"></i>
+                    Online now
+                </div>
                 <div>
                     <strong>Location:</strong>
                     <p>{{member.city}}, {{member.country}}</p>
@@ -54,8 +59,7 @@
             <tab heading="Messages"
                 (selectTab)="onTabActivated($event)">
                 <app-member-messages
-                    [userName]="member.userName"
-                    [messages]="messages">
+                    [userName]="member.userName">
                 </app-member-messages>
             </tab>
         </tabset>
